# den-display

./: .gitignore  README.md  app.py  config.py.template  pyproject.toml
den_display/: garbage_fetcher.py  openweather_checker.py  weatherapi_fetcher.py
lib/: garbage_fetcher.py  weatherapi_fetcher.py
templates/: 500.html  index.html
