[tool.poetry]
name = "den-display"
version = "0.1.0"
description = ""
authors = ["Ellie Frost <web@stillinbeta.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "den_display"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
quart = "^0.18.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
